--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no;">
+<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-
+
+scalable=no;">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
@@ -17,79 +19,98 @@
 
 <div>
 
-<div  style="width:360px;">
-<img style="width:360px;margin:0" src="200.jpg"><br/>
+<div  style="width:350px;">
+<img style="width:355px;" src="200.jpg"><br/>
 </div>
 
-<div  style="background:#FFFFFF; color:#000000;width:360px;">
+<div  style="background:#FFFFFF; color:#000000;width:350px;">
 
 
-<p style="text-align: center;">
-    <span style="font-family: 微软雅黑, &#39;Microsoft YaHei&#39;; color: #4682B4; font-size: 36px;"></span>
-</p>
+
 <p style="text-align:center">
-    <span style="color: #4682B4;"><strong><span style="font-size: 48px; font-family: 宋体;">招</span></strong><strong><span style="font-size: 48px;">&nbsp;&nbsp;&nbsp;</span></strong><strong><span style="font-size: 48px; font-family: 宋体;">工</span></strong></span>
+    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;工</strong></span>
 </p>
+
 <p  style="text-align: left;">
-    <span style="color: #4682B4;"><strong><span style="color: #4682B4; font-size: 24px; font-family: 宋体;">&nbsp;&nbsp;永骏礼品包装材料有限公司</span></strong><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县工业园区的一家美资企业，占地</span><span style="color: #4682B4; font-size: 21px;">88</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">亩，投资</span><span style="color: #4682B4; font-size: 21px;">3600</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">万元，主要生产礼品包装、圣诞饰品、家居装饰、宠物服饰、化妆品包装等机织、手工编织类产品，产品全部外销</span><span style="color: #4682B4; font-size: 21px;">,</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">常年订单充足。公司因业务需要，将</span></span><span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>增招以下工</strong></span></span><span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>种：</strong></span></span>
-</p>
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>染色工：男，4人； 女，2人，18-50周岁；</strong></span></span>
-</p>
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>织带织机工：女，2人，18-35周岁；</strong></span></span>
-</p>
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>小花制作工：女，10人，18-45周岁；</strong></span></span>
+    <span style="color: #4682B4; font-size: 24px; font-family: 宋体;"><strong>&nbsp;&nbsp;永骏礼品包装材料有限公司</strong></span><span 
+
+style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县工业园区的一家美资企业，占地88亩，投资3600万元，主要生产礼品包装、圣诞
+
+饰品、家居装饰、宠物服饰、化妆品包装等机织、手工编织类产品，产品全部外销常年订单充足。公司因业务需要，将<strong>增招以下工种：
+
+</strong></span>
 </p>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>编织工：男女不限，2人，18-50周岁；</strong></span></span>
-</p
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>染色工：男，4人； 女，2人，18-50周岁；</strong></span>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>车缝工：女，10人，18-50周岁；</strong></span></span>
-</p
+<br><br>
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>织带织机工：女，2人，18-35周岁；</strong></span>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>包装工：女，2人，18-50周岁；</strong></span></span>
-</p
+<br><br>
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>小花制作工：女，10人，18-45周岁；</strong></span>
+	
+<br><br>
+   <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>编织工：男女不限，2人，18-50周岁；</strong></span>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>流苏/打扣工：女，4人，18-50周岁；</strong></span></span>
-</p
+<br><br>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>蝴蝶结工：女，4人，18-50周岁；</strong></span></span>
-</p
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>车缝工：女，10人，18-50周岁；</strong></span>
 
-<p>
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>切线工：女，1人，18-50周岁。</strong></span></span>
-</p
+<br><br>
+
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>包装工：女，2人，18-50周岁；</strong></span>
+
+<br><br>
+
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>流苏/打扣工：女，4人，18-50周岁；</strong></span>
+
+<br><br>
+
+    <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>蝴蝶结工：女，4人，18-50周岁；</strong></span>
+
+<br><br>
+
+  <span style="color: #4682B4; font-size: 20px; font-family: 宋体;"><strong>切线工：女，1人，18-50周岁。</strong></span>
+
 
 
 
 <p style="text-indent:55px">
-    <span style="font-size: 21px; font-family: 宋体; color: #4682B4;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;以上所招人员要求身体健康，视力正常，能吃苦耐劳，具有良好的沟通能力和团队协作精神。</span>
+    <span style="font-size: 21px; font-family: 宋体; color: #4682B4;">以上所招人员要求身体健康，视力正常，能吃苦耐劳，具有良好的沟通能力和团队协作
+
+精神。</span>
 </p>
+
 <p style="text-indent:55px">
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">公司提供食宿，<strong>月薪</strong></span><strong><span style="color: #4682B4; font-size: 24px;">2000-5000</span></strong><strong><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">元</span></strong><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">，工资每月</span><span style="color: #4682B4; font-size: 21px;">20</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">号发放，福利待遇优厚，名额有限，报满为止。</span></span>
+    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">公司提供食宿，<strong>月薪
+
+</strong></span><strong><span style="color: #4682B4; font-size: 24px;">2000-5000</span></strong><strong><span style="color: 
+
+#4682B4; font-size: 21px; font-family: 宋体;">元</span></strong><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">，工资每
+
+月</span><span style="color: #4682B4; font-size: 21px;">20</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">号发
+
+放，福利待遇优厚，名额有限，报满为止。</span></span>
+
 </p>
+
 <p style="text-indent:55px">
     <span style="font-size: 21px; font-family: 宋体; color: #4682B4;"><strong>报名地点：</strong>永骏礼品包装材料有限公司人事部</span>
 </p>
+
 <p style="text-indent:55px">
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>公司地址：</strong>镇平县工业园区玉神路</span><span style="color: #4682B4; font-size: 21px;">55</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">号</span></span>
+<span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>公司地址：</strong>镇平县工业园区玉神路55号</span>
 </p>
-<p style="text-indent:55px;margin:0">
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>联系电话：</strong></span>
+
+<p style="text-indent:55px;">
+  <span style="color: #4682B4; font-size: 21px; font-family: 宋体;"><strong>联系电话：</strong></span>
 
 
-<p style="text-align:right;margin:0 ">
+<p style="text-align:right; ">
 <span style="color: #4682B4; font-size: 21px;">0377-65082815 陈先生</span>
 </p>
 
-<p style="text-align:right;margin:0">
+<p style="text-align:right;">
 <span style="color: #4682B4; font-size: 21px;">0377-65082816 张小姐</span>
 
 </p>
@@ -101,16 +122,16 @@
 
 
 
-<p style="text-align:right;margin:0">
+<p style="text-align:right;">
     <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">南阳永骏礼品包装材料有限公司</span>
 </p>
 
-<p style="text-align:right;margin:0">
+<p style="text-align:right;">
     <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">2018年2月7日</span>
 </p>
 
 <div >
-<img style="width:360px;" src="123.jpg"><br/>
+<img style="width:350px;" src="123.jpg"><br/>
 </div>
 
 
@@ -130,7 +151,9 @@
 
 <div align="left" >
 
-<a target="_blank"  href="http://api.map.baidu.com/marker?location=33.052805,112.209429&title=南阳永骏礼品包装材料有限公司&content=★镇平县玉神北路55号★0377-65082816&output=html" ><font size="3px">全屏查看公司位置（地图中可导航）</font></a>
+<a target="_blank"  href="http://api.map.baidu.com/marker?location=33.052805,112.209429&title=南阳永骏礼品包装材料有限公司&content=
+
+★镇平县玉神北路55号★0377-65082816&output=html" ><font size="3px">全屏查看公司位置（地图中可导航）</font></a>
 
 </div>
 
@@ -138,7 +161,17 @@
 	
 <div align="left" >
 	
-<iframe name="" frameborder="0" marginheight="0" marginwidth="0" border="0" scrolling="no" width="360px" height="460px"  src="http://map.baidu.com/mobile/webapp/place/marker/qt=inf&vt=map&act=read_share&code=309/third_party=uri_api&point=12491232.41%7C3878795.23&title=%E5%8D%97%E9%98%B3%E6%B0%B8%E9%AA%8F%E7%A4%BC%E5%93%81%E5%8C%85%E8%A3%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8&content=%E2%98%85%E9%95%87%E5%B9%B3%E5%8E%BF%E7%8E%89%E7%A5%9E%E5%8C%97%E8%B7%AF55%E5%8F%B7%E2%98%850377-65082816"></iframe>
+<iframe name="" frameborder="0" marginheight="0" marginwidth="0" border="0" scrolling="no" width="350px" height="460px"  
+
+src="http://map.baidu.com/mobile/webapp/place/marker/qt=inf&vt=map&act=read_share&code=309/third_party=uri_api&point=12491
+
+232.41%7C3878795.23&title=%E5%8D%97%E9%98%B3%E6%B0%B8%E9%AA%8F%E7%A4%BC%E5%93%81%E5%8C
+
+%85%E8%A3%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8&content=
+
+%E2%98%85%E9%95%87%E5%B9%B3%E5%8E%BF%E7%8E%89%E7%A5%9E%E5%8C%97%E8%B7%AF55%E5%8F
+
+%B7%E2%98%850377-65082816"></iframe>
 
 </div>	
 	
