--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@ scalable=no;">
 <body >
 	
 
-<div>
 
-<div  style="width:350px;">
+
+<div style="width:350px;margin:-8px 0 0 -8px ">
+
 <img style="width:355px;" src="200.jpg"><br/>
+
 </div>
 
-<div  style="background:#FFFFFF; color:#000000;width:350px;">
+
+<div style="width:350px;margin:0;padding:0">
+
+
+
 
 
 
 <p style="text-align:center">
-    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;工</strong></span>
+    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;工</strong></span>
 </p>
 
 <p  style="text-align: left;">
@@ -140,7 +146,6 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 
 
 
-</div>
 
 
 
@@ -156,6 +161,9 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 ★镇平县玉神北路55号★0377-65082816&output=html" ><font size="3px">全屏查看公司位置（地图中可导航）</font></a>
 
 </div>
+
+
+
 
 </br></br>
 	
