--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ scalable=no;">
 
 
 
-<div style="width:355px;margin:-8px 8px 0 -8px ">
+<div style="width:360px;margin:-8px 0 0 -8px ">
 
-<img style="width:355px;" src="200.jpg"><br/>
+<img style="width:365px;" src="200.jpg"><br/>
 
 </div>
 
