--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ scalable=no;">
 
 
 
-<div style="width:360px;margin:-8px 0 0 -8px ">
+<div style="width:360px;margin:-8px 20px 0 -8px ">
 
 <img style="width:365px;" src="200.jpg"><br/>
 
