--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ scalable=no;">
 
 <div style="width:360px;margin:-8px 200px 0 -8px ">
 
-<img style="width:355px;" src="200.jpg"><br/>
+<img style="width:360px;" src="200.jpg"><br/>
 
 </div>
 
@@ -34,7 +34,7 @@ scalable=no;">
 
 
 <p style="text-align:center">
-    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;工</strong></span>
+    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;工</strong></span>
 </p>
 
 <p  style="text-align: left;">
