--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 
 
 <p style="text-indent:55px">
-    <span style="font-size: 21px; font-family: 宋体; color: #4682B4;">以上所招人员要求身体健康，视力正常，能吃苦耐劳，具有良好的沟通能力和团队协作
-精神。</span>
+<span style="font-size: 21px; font-family: 宋体; color: #4682B4;">以上所招人员要求身体健康，视力正常，能吃苦耐劳，具有良好的沟通能力和团队协作精神。</span>
 </p>
 
 <p style="text-indent:55px">
