--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ scalable=no;">
 <body >
 	
 
-<div style="width:360px;margin:-8px 20px 0 -8px ">
+<div style="width:360px;margin:-8px 0px 0 -8px ">
 
 <img style="width:360px;" src="200.jpg"><br/>
 
@@ -28,7 +28,7 @@ scalable=no;">
 
 
 <p style="text-align:center">
-    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;工</strong></span>
+    <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;工</strong></span>
 </p>
 
 <p  style="text-align: left;">
