--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@ scalable=no;">
 <body >
 	
 
-<div style="width:360px;margin:-8px 0px 0 -8px ">
+<div style="width:350px;margin:-8px 8px -8px -8px ;background:#DAA520">
 
-<img style="width:360px;" src="200.jpg"><br/>
+
+<div style="margin:-8px 8px -8px -8px ">
+
+<img style="width:358px;" src="200.jpg"><br/>
+
 
 </div>
-
-
-<div style="width:350px;margin:0;padding:0">
 
 
 <p style="text-align:center">
