--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ scalable=no;">
 <body >
 	
 
-<div style="width:350px;margin:-8px 16px -8px -8px ;background:#000000">
+<div style="width:350px;margin:-8px 160px -8px -8px ;background:#000F00">
 
 
-<div style="margin:-8px 16px -8px -8px ">
+<div style="margin:-8px 160px -8px -8px ">
 
 <img style="width:358px;" src="200.jpg"><br/>
 
