--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@ scalable=no;">
 <body >
 	
 
-<div style="width:360px;margin:-8px 160px -8px -8px ;background:#CD00CD">
+<div style="width:360px;margin:-8px 0px -8px -8px ;background:#0000CD">
 
 
-<div style="margin:-8px 160px -8px -8px ">
+<div style="margin:-8px 0px -8px -8px ">
 
 <img style="width:368px;" src="200.jpg"><br/>
 
 
 </div>
-
+	
+<div style="padding:2px 2px 2px 2px ">
 
 <p style="text-align:center">
     <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;工</strong></span>
@@ -127,6 +128,9 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
     <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">2018年2月7日</span>
 </p>
 
+</div>
+	
+	
 <div >
 <img style="width:350px;" src="123.jpg"><br/>
 </div>
