--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ scalable=no;">
 <body >
 	
 
-<div style="width:360px;margin:-8px 0px -8px -8px ;background:#404040">
+<div style="width:360px;margin:-8px 0px -8px -8px ;background:#EEE0E5">
 
 
 <div style="margin:-8px 0px -8px -8px ">
