--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ scalable=no;">
     <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;工</strong></span>
 </p>
 
-<p  style="text-align: left;">
-    <span style="color: #4682B4; font-size: 24px; font-family: 宋体;"><strong>&nbsp;&nbsp;永骏礼品包装材料有限公司</strong></span><span 
+<p  style="text-align: left;text-indent:55px">
+    <span style="color: #4682B4; font-size: 24px; font-family: 宋体;"><strong>永骏礼品包装材料有限公司</strong></span><span 
 
 style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县工业园区的一家美资企业，占地88亩，投资3600万元，主要生产礼品包装、圣诞
 
