--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ scalable=no;">
 
 </div>
 	
-<div style="padding:0px 5px 0px 15px ">
+<div style="padding:0px 10px 0px 10px ">
 
 <p style="text-align:center">
     <span style="color: #4682B4;font-size: 48px; font-family: 宋体;"><strong>招&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;工</strong></span>
@@ -116,11 +116,11 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 </p>
 
 
-<p style="margin:0 0 50px 0">
+<p style="margin:0 0 30px 0">
 
 
 
-<p style="text-align:right;">
+<p style="text-align:right;margin:0 0 -10px 0">
     <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">南阳永骏礼品包装材料有限公司</span>
 </p>
 
