--- a/index.html
+++ b/index.html
@@ -76,19 +76,14 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 
 
 <p style="text-indent:55px">
+
 <span style="font-size: 21px; font-family: 宋体; color: #4682B4;">以上所招人员要求身体健康，视力正常，能吃苦耐劳，具有良好的沟通能力和团队协作精神。</span>
+
 </p>
 
 <p style="text-indent:55px">
-    <span style="color: #4682B4;"><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">公司提供食宿，<strong>月薪
 
-</strong></span><strong><span style="color: #4682B4; font-size: 24px;">2000-5000</span></strong><strong><span style="color: 
-
-#4682B4; font-size: 21px; font-family: 宋体;">元</span></strong><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">，工资每
-
-月</span><span style="color: #4682B4; font-size: 21px;">20</span><span style="color: #4682B4; font-size: 21px; font-family: 宋体;">号发
-
-放，福利待遇优厚，名额有限，报满为止。</span></span>
+<span style="color: #4682B4; font-size: 21px; font-family: 宋体;">公司提供食宿，<strong>月薪<span style="color: #4682B4; font-size: 24px;">2000-5000</span>元</strong>，工资每月20号发放，福利待遇优厚，名额有限，报满为止。</span>
 
 </p>
 
@@ -105,11 +100,11 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 
 
 <p style="text-align:right;margin:0 0 -15px 0 ">
-<span style="color: #4682B4; font-size: 21px;">0377-65082815  陈先生</span>
+<span style="color: #4682B4; font-size: 21px;">0377-65082815&nbsp;&nbsp;陈先生</span>
 </p>
 
 <p style="text-align:right;">
-<span style="color: #4682B4; font-size: 21px;">0377-65082816  张小姐</span>
+<span style="color: #4682B4; font-size: 21px;">0377-65082816&nbsp;&nbsp;张小姐</span>
 
 </p>
 
