--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@ scalable=no;">
     <span style="color: #4682B4; font-size: 24px; font-family: 宋体;"><strong>永骏礼品包装材料有限公司</strong></span><span 
 
 style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县工业园区的一家美资企业，占地88亩，投资3600万元，主要生产礼品包装、圣诞
-
 饰品、家居装饰、宠物服饰、化妆品包装等机织、手工编织类产品，产品全部外销常年订单充足。公司因业务需要，将<strong>增招以下工种：
 
 </strong></span>
@@ -104,7 +103,7 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 </p>
 
 <p style="text-align:right;">
-<span style="color: #4682B4; font-size: 21px;">0377-65082816&nbsp;&nbsp;张小姐</span>
+<span style="color: #4682B4; font-size: 21px;">0377-65082816&nbsp;&nbsp;张女士</span>
 
 </p>
 
@@ -120,7 +119,7 @@ style="color: #4682B4; font-size: 21px; font-family: 宋体;">是位于镇平县
 </p>
 
 <p style="text-align:right;">
-    <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">2018年2月7日</span>
+    <span style="color: #4682B4; font-size: 21px; font-family: 宋体;">2018年3月3日</span>
 </p>
 
 </div>
