--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 
 <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-
-
 scalable=no;">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
+	
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=65371050" charset="UTF-8"></script>
 
 
 <title>招工-南阳永骏礼品包装材料有限公司</title>
