--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ scalable=no;">
 </head>
 
 <body >
-	
+
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=65371050" charset="UTF-8"></script>
+
 
 <div style="width:360px;margin:-8px 0px -8px -8px ;background:#EEE0E5">
 
